chore: update fo show data and combine response
